--- a/listado/html_css/style.css
+++ b/listado/html_css/style.css
@@ -21,16 +21,18 @@ body {
 
 
 li {
-    padding: 5px;
-    margin: 0 auto;
+    padding: 10px; /* Adjust padding as needed */
+    margin: 5px auto; /* Adjust margin as needed */
     width: 80%;
     margin-top: 5px;
     text-align: justify;
     background-color: rgba(255, 255, 255, 0.8);
-    border: 10px solid transparent; 
-    box-sizing: border-box; 
+    border: 10px solid transparent;
+    box-sizing: border-box;
     border-radius: 10px;
+    word-wrap: break-word; /* Allow long words to break and wrap */
 }
+
 
 
 .rojo,
@@ -103,4 +105,25 @@ ul {
     list-style-type: none;
 }
 
+/* Media query for smaller screen sizes */
+@media (max-width: 770px) {
+    .titulo {
+        width: 90%; /* Adjust width for smaller screens */
+    }
+
+    .elemento {
+        width: 100%; /* Make the elemento div full width */
+        justify-content: flex-start; /* Align content to the left */
+        margin-left: 0; /* Remove margin */
+    }
+
+    .elemento img {
+        width: 100px; /* Adjust image size for smaller screens */
+    }
+
+    .nombre {
+        font-size: 16px; /* Adjust font size for smaller screens */
+        margin: 5px;
+    }
+}
 
