--- a/listado/html_css/style.css
+++ b/listado/html_css/style.css
@@ -21,8 +21,8 @@ body {
 
 
 li {
-    padding: 10px; /* Adjust padding as needed */
-    margin: 5px auto; /* Adjust margin as needed */
+    padding: 10px; 
+    margin: 5px auto; 
     width: 80%;
     margin-top: 5px;
     text-align: justify;
@@ -30,7 +30,7 @@ li {
     border: 10px solid transparent;
     box-sizing: border-box;
     border-radius: 10px;
-    word-wrap: break-word; /* Allow long words to break and wrap */
+    word-wrap: break-word; 
 }
 
 
@@ -105,24 +105,24 @@ ul {
     list-style-type: none;
 }
 
-/* Media query for smaller screen sizes */
+
 @media (max-width: 770px) {
     .titulo {
-        width: 90%; /* Adjust width for smaller screens */
+        width: 90%; 
     }
 
     .elemento {
-        width: 100%; /* Make the elemento div full width */
-        justify-content: flex-start; /* Align content to the left */
-        margin-left: 0; /* Remove margin */
+        width: 100%; 
+        justify-content: flex-start; 
+        margin-left: 0; 
     }
 
     .elemento img {
-        width: 100px; /* Adjust image size for smaller screens */
+        width: 100px; 
     }
 
     .nombre {
-        font-size: 16px; /* Adjust font size for smaller screens */
+        font-size: 16px; 
         margin: 5px;
     }
 }
