--- a/listado/html_css/style.css
+++ b/listado/html_css/style.css
@@ -14,7 +14,7 @@
 }
 
 body {
-    background-image: url('background.jpg');
+    background-image: url('../imagenes/background.jpg');
     background-size: cover;
     background-position: center;
 }
