--- a/listado/bootstrap/style.css
+++ b/listado/bootstrap/style.css
@@ -24,7 +24,6 @@ body {
 
 .personaje{
     display: flex;
-    align-items: start;
     margin-bottom: 20px;
     background-color: rgba(255, 255, 255, 0.8);
     padding: 2%;
@@ -86,19 +85,11 @@ h1{
     background-color: lightblue;
 }
 
-.link {
-    text-align: center;
-    padding: 10px;
-    margin: 0 auto; 
+#navbar .bg-body-tertiary {
+    background-color: rgba(255, 255, 255, 0.6) !important;
 }
-
-.link a {
-    color: black;
-    font-family: 'Arial', sans-serif;
-    text-decoration: none;
-    background-color: rgba(255, 255, 255, 0.5);
-    padding: 15px;
-    border-radius: 10px;
+#navbar{
+    margin-bottom: 3%;
 }
 
 @media (max-width: 670px) {
